src/Domain/Compiler/Tests/Expression/CharacterLiteral/__Baselines__/CharacterLiteral_Error_UnsupportedCharacter_AsciiExtended-StashIr.error
error: Character literal must be in ASCII (non-extended) range.
--> main.hs:8:9
  | 
8 | return 'å';    }
  |         ^
